# esphome-secplus-gdo-esp32c6

./: .gitignore  .gitmodules  LINKS.md  README.md  build.sh  config.env.example
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
esp-idf-build/: CMakeLists.txt  sdkconfig.defaults
esp-idf-build/components/gdolib/: CMakeLists.txt  gdo.c  gdo_priv.h  gdo_utils.c  include  secplus.c  secplus.h
esp-idf-build/main/: CMakeLists.txt  main.c
esphome/: .gitignore  esp32c6-gdo.yaml.template  secrets.yaml.example
esphome/components/gdolib-c6/: CMakeLists.txt  extra_script.py  library.json
lib/esp32c6/: VERSION
tests/: run_tests.sh  test_build_options.sh  test_esphome_config.sh  test_yaml_generation.sh
tests/fixtures/: test_config.env  test_secrets.yaml
tests/lib/: test_helpers.sh
